--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Programme de ménage</title>
+  <title>House cleaner</title>
   <!-- Quasar CSS UMD pour Vue 3 / Quasar 2 -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet"
     type="text/css">
@@ -109,7 +109,6 @@
             selectedRooms: [],
             selectedTasks: {},
             bgColor: { 'A':'teal','W': 'green', 'M': 'orange', 'Y': 'red' }
-
           };
         },
         computed: {
